--- a/.travis.yml
+++ b/.travis.yml
@@ -16,23 +16,17 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+php:
+  - 5.6
+  - 7.0
+  - 7.1
+
 matrix:
   include:
-    - php: 7.2
-      env: WP_VERSION=latest
-    - php: 7.1
-      env: WP_VERSION=latest
-    - php: 7.0
-      env: WP_VERSION=latest
     - php: 5.6
-      env: WP_VERSION=latest
+      env: WP_VERSION=latest WP_MULTISITE=1 PHP_LATEST_STABLE=7.1
     - php: 5.6
-      env: WP_VERSION=trunk
-    - php: 5.6
-      env: WP_TRAVISCI=phpcs
-    - php: 5.6
-      env: WP_VERSION=latest
-      dist: precise
+      env: WP_VERSION=5.1.1 WP_MULTISITE=0 PHP_LATEST_STABLE=7.1
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
